--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"/>
   <link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/>
-  <link rel="Dsc-Nfsu/manifest" href="/manifest.json"/><title>GDSC NFSU</title><script defer="defer" src="Dsc-Nfsu/static/js/main.078c40ad.js"></script>
-  <link href="Dsc-Nfsu/static/css/main.0a59d099.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+  <link rel="manifest" href="/manifest.json"/><title>GDSC NFSU</title>
+  <script defer="defer" src="static/js/main.078c40ad.js"></script>
+  <link href="static/css/main.0a59d099.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
